--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -8,7 +8,7 @@ target_link_libraries(hog_gui boost_unit_test_framework boost_system ${OPENCV_LD
 #target_link_libraries(nn_hogJointsParts boost_system boost_filesystem boost_regex handclass sqlite3 ${GSL_LIBRARIES} lshkit ${OPENCV_LDFLAGS})
 
 add_executable(handTracker handTracker.cpp) 
-target_link_libraries(handTracker boost_regex boost_filesystem boost_system boost_unit_test_framework boost_program_options sqlite3 ann_figtree_version figtree handclass ${OPENCV_LDFLAGS})
+target_link_libraries(handTracker boost_regex boost_filesystem boost_system boost_unit_test_framework boost_program_options sqlite3 ann_figtree_version figtree handclass ${OPENCV_LDFLAGS} lshkit ${GSL_LIBRARIES})
 
 add_executable(createFeatDB createFeatDB.cpp) 
 target_link_libraries(createFeatDB boost_system boost_filesystem boost_regex handclass sqlite3 ${GSL_LIBRARIES} lshkit ${OPENCV_LDFLAGS})
