--- a/handclass_config.h.in
+++ b/handclass_config.h.in
@@ -2,6 +2,10 @@
 #define _CONFIG_H_
 
 static const char *SCENEPATH="@SCENE_PATH@";
+static const char *FLANN_BIN_PATH = "@FLANN_BIN_PATH@";
+static const char *FLANN_INDEX_PATH = "@FLANN_INDEX_PATH@";
+static const char *LSH_BIN_PATH = "@LSH_BIN_PATH@";
+static const char *LSH_INDEX_PATH = "@LSH_INDEX_PATH@";
 #cmakedefine CAM_ACCESS
 
 #endif
