Working version on MAC

--- a/3rdparty/lshkit-0.2.1/CMakeLists.txt
+++ b/3rdparty/lshkit-0.2.1/CMakeLists.txt
@@ -22,7 +22,7 @@ SET(CMAKE_DEBUG_POSTFIX _debug)
 SET(CMAKE_VERBOSE_MAKEFILE ON)
 # SET(Boost_USE_STATIC_LIBS ON)
 
-SET(CMAKE_INCLUDE_PATH ${CMAKE_INCLUDE_PATH} "/usr/local/include/boost")
+# SET(CMAKE_INCLUDE_PATH ${CMAKE_INCLUDE_PATH} "/usr/local/include/boost")
 
 
 #SET(BUILD_SHARED_LIBS FALSE)
@@ -37,8 +37,6 @@ FIND_PACKAGE(Boost COMPONENTS program_options filesystem)
 
 INCLUDE_DIRECTORIES(${LSHKIT_SOURCE_DIR}/include ${GSL_INCLUDE_DIR} ${Boost_INCLUDE_DIR})
 LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
-
-MESSAGE( STATUS "BOOST DIRS:" ${Boost_INCLUDE_DIR} )
 
 ADD_SUBDIRECTORY("src")
 ADD_SUBDIRECTORY("tools")
